fix replace header paddings with flex aligning

--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -26,5 +26,4 @@
   min-width: 12rem;
   display: flex;
   align-items: center;
-  padding: 2rem 0;
 }
