--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -6,3 +6,4 @@ $header-min-height: 6rem;
 $padding-pomodoro-heading: 1rem 0;
 $background-close-button: rgba(255, 0, 0, 0.4);
 $button-width: 85px;
+$padding-md: 2rem;
