--- a/src/styles/components/_headings.scss
+++ b/src/styles/components/_headings.scss
@@ -3,7 +3,6 @@
   font-size: 4rem;
   min-height: $header-min-height;
   line-height: $header-min-height;
-  padding: $padding-pomodoro-heading;
   color: var(--text-color, #222);
 }
 
