--- a/src/styles/components/_theme-switch.scss
+++ b/src/styles/components/_theme-switch.scss
@@ -7,7 +7,6 @@
 
   @include respond(mobile) {
     font-size: 2rem;
-    padding: 0 0 2rem 0;
   }
 }
 
